--- a/src/Components/UI/Footer/Footer.module.css
+++ b/src/Components/UI/Footer/Footer.module.css
@@ -1,7 +1,23 @@
 .Footer {
-    background-color: coral;
+    background-color: rgb(236, 236, 236);
     position: fixed;
     bottom: 0;
-    height: 50px;
+    height: 40px;
     width: 100%;
+    display: flex;
+    flex-flow: row;
+
 }
+
+.FooterLinks {
+    display: flex;
+    flex-flow: row;
+    list-style: none;
+}
+
+.FooterLinks li {
+    margin-left: 10px;
+    text-decoration: underline;
+    
+}
+
