--- a/src/Components/UI/Header/Header.module.css
+++ b/src/Components/UI/Header/Header.module.css
@@ -6,6 +6,8 @@
     top: 0;
     left: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-flow: row;
 
 }
 
@@ -13,4 +15,12 @@
     font-size: 3rem;
     margin:0;
     padding: 0;
+}
+
+.Logo {
+    height: 50px;
+    width: auto;
+    left: 0;
+    margin-left: 10px;
+    margin-top: 10px;
 }
