--- a/src/Components/UI/Header/Header.module.css
+++ b/src/Components/UI/Header/Header.module.css
@@ -8,6 +8,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-flow: row;
+    z-index: 800;
 
 }
 
