Added routing and fixed the sidedrawer links being visible when drawer closed. Changed some of the styling on forms.

--- a/src/Components/Object/Object.module.css
+++ b/src/Components/Object/Object.module.css
@@ -11,6 +11,8 @@
 
 }
 
-/* .Object :hover{
-    background-color: #0dc5c1;
-} */
+@media only screen and (max-width: 500px) {
+    .Object {
+        width: 50%;
+    }
+}
