--- a/src/Components/UI/SideDrawer/SideDrawer.module.css
+++ b/src/Components/UI/SideDrawer/SideDrawer.module.css
@@ -1,7 +1,7 @@
 .SideDrawer {
     background-color: #0dc5c1;
     position: fixed;
-    width: 200px;
+    width: 100%;
     display: flex;
     flex-flow: column;
     align-items: flex-start;
@@ -16,20 +16,23 @@ ul {
     margin: 0;
     padding:0;
     margin-top: 5px;
+    display: contents;
 }
 
-li {
+li, a {
     font-size: 1.5rem;
     border: 1px solid transparent;
     margin-left: 30px;
     text-decoration: none;
     cursor: pointer;
+    color: white;
 }
 
 li:hover {
     transition: 0.5s;
     border-bottom: 1px solid white;
-    color: rgb(246, 250, 188);
+    color: #ffc30f;
     
     
 }
+
