--- a/src/Containers/Hittat/Hittat.module.css
+++ b/src/Containers/Hittat/Hittat.module.css
@@ -16,7 +16,7 @@
 }
 
 .Hittat form{
-    width:80%;
+    width:90%;
     margin: 0 auto;
     display: flex;
     flex-flow: column;
@@ -31,11 +31,22 @@
 .Hittat textarea {
     height: 100px;
     font-size: 1.5rem;
+    font-family: inherit;
+}
+
+textarea:focus, input:focus {
+    background-color: #0dc5c1;
+    color: white;
+    border: 1px solid #c5970d ;
+}
+
+::placeholder {
+    color: rgb(179, 179, 179);
 }
 
 /* Media queries */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 767px) {
     .Hittat form {
         width: 50%;
     }
