Fixed some issues in tappat and added errorhandlinging in login, and account button in the sidedrawer.

--- a/src/Components/UI/SideDrawer/SideDrawer.module.css
+++ b/src/Components/UI/SideDrawer/SideDrawer.module.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
     align-items: flex-start;
     color: white;
     position: relative;
@@ -36,3 +36,7 @@ li:hover {
     
 }
 
+.AccountIcon img{
+    height: 30px;
+    margin-top: 5px;
+}
