--- a/src/Components/ObjectFull/ObjectFull.module.css
+++ b/src/Components/ObjectFull/ObjectFull.module.css
@@ -20,6 +20,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin: 0;
 }
 
 .ImageSection {
@@ -49,12 +50,13 @@ h4 {
 @media screen and (max-width: 500px) {
     .ObjectFull {
         width: 100%;
-        height: 80vh;
-        margin: 0;
+        min-height: 60vh;
+        margin: 0 0 10px 0;
     }
     
     .ObjectFull img {
       max-width: 70%;
+      max-height: 100px;
     }
   }
 
