--- a/src/Components/ObjectSmall/ObjectSmall.module.css
+++ b/src/Components/ObjectSmall/ObjectSmall.module.css
@@ -1,5 +1,7 @@
 .ObjectSmall {
     width: 200px;
+    height: 200px;
+    margin-top: 10px;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -9,6 +11,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: pre-line;
+    border-radius: 5px;
 }
 
 .ObjectSmall img{
@@ -35,6 +38,7 @@
     transform: translateY(-20px);
     font-family: sans-serif;
     font-weight: 100;
+    margin-top: 10px;
 }
 
 .ObjectSmall:hover .HoverInfo {
@@ -43,9 +47,18 @@
     transform: translateY(0px);
 }
 
+@media (max-width: 1020px) {
+    .ObjectSmall {
+        margin-top: 10px;
+    }
+
+}
+
+
 @media (max-width: 620px) {
     .ObjectSmall {
         width: 100px;
+        height: 100px;
     }
     .HoverInfo {
         display: none;
