--- a/src/Components/UI/Login/Login.module.css
+++ b/src/Components/UI/Login/Login.module.css
@@ -1,13 +1,55 @@
-.Login {
-    box-shadow: 5px 10px 8px #888888;
-    width: 300px;
-    transition: 0,5s;
+.Wrapper {
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.Card {
+    background-color: #0dc5c1;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 80%;
+    min-height: 60%;
+    box-shadow: 5px 5px 5px rgb(80, 80, 80);
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 5px;
+    animation: slideRight 1s;
+}
+
+.Message {
+    width: 400px;
+    margin-right: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-flow: row-reverse;
+    color: white;
+}
+.MessageText {
+    display: flex;
+    flex-flow: column;
+    width: 60%;
+    justify-content: center;
 }
 
 .Login {
+    width: 400px;
+    transition: 0,5s;
     background-color: white;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 5px;
+    animation: slideLeft 1s;
 }
 
 .Login label{
@@ -19,13 +61,15 @@
 .Login input{
     height: 2rem;
     font-size: 1.5rem;
+    border-radius: 5px;
 }
 
 .Login form{
-    width:90%;
-    margin: 0 auto;
     display: flex;
+    width: 100%;
     flex-flow: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .Login button{
@@ -34,6 +78,7 @@
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .Login textarea {
@@ -55,4 +100,57 @@ textarea:focus, input:focus {
 .Link {
     color: #0dc5c1;
     cursor: pointer;
+}
+
+.Message img {
+    max-width: 60%;
+    object-fit: contain;
+}
+
+.Message h1 {
+    font-size: 3rem;
+}
+
+hr {
+    width: 100%;
+    border: 3px solid;
+    border-radius: 2px;
+}
+
+@media only screen and (max-width: 400px) {
+    .Login {
+        width: 100%;
+    }
+
+    .Message {
+        width: 100%;
+    }
+
+    .Message img {
+        display: none;
+    }
+
+    .Card {
+        width: 100%;
+        height: 100%;
+        margin-top: 20px;
+    }
+  }
+
+  @keyframes slideRight {
+    from {transform: translateX(-400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes slideLeft {
+    from {transform: translateX(400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+    
 }
