--- a/src/Components/Summary/Summary.module.css
+++ b/src/Components/Summary/Summary.module.css
@@ -11,7 +11,8 @@
     width: 100vw;
     background-color: rgb(238, 238, 238);
     margin: 30px 0;
-    color: white;
+    color: #0dc5c1;
+    font-weight: lighter;
 }
 
 .ObjectSection {
@@ -22,7 +23,7 @@
     justify-content: space-around;
     align-items: center;
     margin: 0 10%;
-
+    animation: fadeIn 1s;
 }
 
 /* Media Queries */
@@ -32,4 +33,24 @@
         margin: 0;
     }
 
+}
+
+/*Animations*/
+
+@keyframes slideRight {
+    from {transform: translateX(-400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes slideLeft {
+    from {transform: translateX(400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+    
 }
