Added category search function, posting and blank search function in categories.

--- a/src/Components/TappatInstruction/TappatInstruction.module.css
+++ b/src/Components/TappatInstruction/TappatInstruction.module.css
@@ -1,3 +1,10 @@
+.InstructionWrapper {
+    width: 100vw;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+}
+
 .Instruction {
     width: 900px;
     height: 200px;
