--- a/src/Components/Object/Object.module.css
+++ b/src/Components/Object/Object.module.css
@@ -4,6 +4,7 @@
     margin: 10px;
     border: rgba(128, 128, 128, 0.198) 2px solid;
     cursor: pointer;
+    animation: fadeIn 1s;
 }
 
 .Object:hover {
@@ -15,6 +16,8 @@
     width: 50%;
 
 }
+
+/* Media queries */
 
 @media only screen and (min-width: 700px) {
     .Object {
@@ -30,4 +33,24 @@
     .Object {
         width: 80%;
     }
+}
+
+/* Animations*/
+
+@keyframes slideRight {
+    from {transform: translateX(-400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes slideLeft {
+    from {transform: translateX(400px); opacity: 0;}
+    to {transform: translateX(0px); opacity: 1;}
+    
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+    
 }
