--- a/src/Containers/Hittat/Hittat.module.css
+++ b/src/Containers/Hittat/Hittat.module.css
@@ -15,6 +15,11 @@
     font-size: 1.5rem;
 }
 
+.Hittat select{
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
 .Hittat form{
     width:90%;
     margin: 0 auto;
